# cis194

./: .gitignore  README.md
01/CreditCard/: CreditCard.cabal
01/CreditCard/src/: CreditCard.hs
01/CreditCard/test/: CreditCardTest.hs  Test.hs
01/Hanoi/: Hanoi.cabal
01/Hanoi/src/: Hanoi.hs
01/Hanoi/test/: Test.hs
01/HanoiG/: HanoiG.cabal
01/HanoiG/src/: HanoiG.hs
01/HanoiG/test/: Test.hs
02/: hacker.txt
02/Log/: Log.cabal
02/LogAnalysis/: LogAnalysis.cabal
02/LogAnalysis/src/: LogAnalysis.hs
03/Golf/: Golf.cabal
03/Golf/src/: Golf.hs
04/Wholemeal/: Wholemeal.cabal
04/Wholemeal/src/: Wholemeal.hs
04/Wholemeal/test/: test.hs
05/Calc/: Calc.cabal
05/Calc/src/: Calc.hs
06/Fibonacci/: Fibonacci.cabal
06/Fibonacci/src/: Fibonacci.hs
06/Fibonacci/test/: Test.hs
07/Editor/: Editor.cabal
07/JoinListEditor/: JoinListEditor.cabal
07/JoinListEditor/src/: JoinList.hs
07/JoinListEditor/test/: Test.hs
07/StringBufEditor/: StringBufEditor.cabal
07/Word/: Word.cabal
07/Word/src/Buffer/: JoinList.hs  StringBuffer.hs
07/Word/src/Buffer/JoinList/: Scrabble.hs  Sized.hs
07/Word/src/Editor/: JoinListEditor.hs  StringBufEditor.hs
07/Word/test/: Test.hs
08/Party/: Party.cabal
08/Party/src/: Main.hs  Party.hs
09/: README.md
10/AParser/: AParser.cabal
10/AParser/src/: AParser.hs
10/AParser/test/: Test.hs
11/SExpr/: SExpr.cabal
11/SExpr/src/: SExpr.hs
11/SExpr/test/: Test.hs
12/Risk/: Risk.cabal
12/Risk/src/: Risk.hs
lec/applicative2/: applicative2.cabal
lec/applicative2/src/: Applicative2.hs
lec/knapsack/: knapsack.cabal
lec/knapsack/src/: Knapsack.hs
lec/knapsack/test/: Test.hs
lec/monoids/: monoids.cabal
lec/monoids/src/: Monoids.hs
