name:                CreditCard
version:             0.1.0.0
synopsis:            Validating Credit Card Numbers
license:             GPL-3
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.18

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    CreditCard
  build-depends:
      base >=4.7 && <4.8

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Test.hs
  build-depends:
      base >=4.7 && <4.8
    , CreditCard
    , tasty >= 0.10
    , tasty-hunit >= 0.9

