name: Hanoi
version: 0.1.0.0
synopsis: Towers of Hanoi         
license: GPL-3
license-file: LICENSE
author: Christopher Mazey
maintainer: cjmazey@gmail.com            
build-type: Simple
cabal-version: >=1.18

library
  exposed-modules: Hanoi        
  build-depends: base >=4.7 && <4.8
  hs-source-dirs: src
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends: base >=4.7 && <4.8,
                 tasty >= 0.10,
                 tasty-hunit >= 0.9,
                 Hanoi
  hs-source-dirs: test
  default-language: Haskell2010
