name:                LogAnalysis
version:             0.1.0.0
synopsis:            CIS 194 Homework 2
license:             GPL-3
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.18
data-files:          error.log,
                     sample.log
data-dir:            data

library
  exposed-modules:     LogAnalysis
  other-modules:       Paths_LogAnalysis
  build-depends:       base >=4.7 && <4.8,
                       parsec >=3.1 && <3.2,
                       Log
  hs-source-dirs:      src
  default-language:    Haskell2010
