name: Wholemeal
version: 0.1.0.0
synopsis: CIS 194 Homework 4
license: GPL-3
license-file: LICENSE
author: Christopher Mazey
maintainer: cjmazey@gmail.com
build-type: Simple
cabal-version: >=1.18

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Wholemeal
  build-depends: base >=4.7 && <4.8

test-suite test
  default-language: Haskell2010
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: test.hs
  build-depends: base,
                 tasty,
                 tasty-quickcheck,
                 Wholemeal
