name:                Fibonacci
version:             0.1.0.0
synopsis:            CIS 194 Homework 6
license:             GPL-3
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.20

library
  exposed-modules:     Fibonacci
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language: Haskell2010
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  build-depends:    Fibonacci
                  , QuickCheck >= 2.7
                  , base
                  , tasty
                  , tasty-quickcheck
