name:                Editor
version:             0.1.0.0
synopsis:            CIS 194 Homework 7 (Editor)
license:             GPL-3
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.20
data-files:          carol.txt
data-dir:            data

library
  exposed-modules:     Editor
  other-modules:       Buffer
                     , Paths_Editor
  other-extensions:    GeneralizedNewtypeDeriving
                     , ScopedTypeVariables
  build-depends:       base >=4.7 && <4.8
                     , mtl >=2.1 && <2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
