name:                JoinListEditor
version:             0.1.0.0
synopsis:            CIS 194 Homework 7 (JoinListEditor)
license:             GPL-3
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.18
data-files:          carol.txt
data-dir:            data

executable JoinListEditor
  main-is:             JoinListEditor.hs
  other-modules:       JoinList
                     , Scrabble
                     , Paths_JoinListEditor
  other-extensions:    GeneralizedNewtypeDeriving
                     , FlexibleInstances
  build-depends:       base >=4.7 && <4.8
                     , Editor
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language: Haskell2010
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends: JoinList
               , QuickCheck >= 2.7
               , base >=4.7 && <4.8
               , tasty
               , tasty-quickcheck