name:                Word
version:             0.1.0.0
synopsis:            CIS 194 Homework 7
license:             GPL-3
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.10
data-files:          carol.txt
data-dir:            data

library
  exposed-modules:     Buffer
                     , Editor
                     , Buffer.StringBuffer
                     , Buffer.JoinList
  other-modules:       Buffer.JoinList.Scrabble
                     , Buffer.JoinList.Sized

  other-extensions:    FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , ScopedTypeVariables
                     , TypeSynonymInstances
  build-depends:       base
                     , mtl
                     , tasty
                     , tasty-quickcheck
  hs-source-dirs:      src
  default-language:    Haskell2010

executable StringBufEditor
  main-is:          StringBufEditor.hs
  other-extensions: FlexibleInstances
                  , GeneralizedNewtypeDeriving
                  , ScopedTypeVariables
                  , TypeSynonymInstances
  build-depends:    Word
                  , base
  hs-source-dirs:   src/Editor
  default-language: Haskell2010

executable JoinListEditor
  main-is:          JoinListEditor.hs
  other-extensions: GeneralizedNewtypeDeriving
                  , ScopedTypeVariables
  build-depends:    Word
                  , base
  hs-source-dirs:   src/Editor
  default-language: Haskell2010

test-suite test
  default-language: Haskell2010
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0

  main-is:          Test.hs
  build-depends:    Word
                  , QuickCheck
                  , base
                  , tasty
                  , tasty-quickcheck