name:                Party
version:             0.1.0.0
synopsis:            CIS 194 Homework 8
license:             GPL-3
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.18
data-files:          company.txt
data-dir:            data

library
  exposed-modules:     Employee
                     , Party
  build-depends:       base >=4.7 && <4.8
                     , containers >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable Party
  main-is:          Main.hs
  other-modules:    Paths_Party
  build-depends:    Party
                  , base
                  , containers
  hs-source-dirs:   src
  default-language: Haskell2010
