name:                SExpr
version:             0.1.0.0
synopsis:            CIS 194 Homework 11
license:             GPL-3
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:     SExpr
  other-modules:       AParser
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
