name:                SExpr
version:             0.1.0.0
synopsis:            CIS 194 Homework 11
license:             GPL-3
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:     SExpr
                     , AParser
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  main-is:             Test.hs
  type:                exitcode-stdio-1.0
  build-depends:       SExpr
                     , base
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  hs-source-dirs:      test
  default-language:    Haskell2010
