name:                Risk
version:             0.1.0.0
synopsis:            CIS 194 Homework 12
license:             GPL-3
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:     Risk
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base >=4.7 && <4.8, MonadRandom >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010