name:                applicative2
version:             0.1.0.0
synopsis:            11-applicative2
license:             LICENSE
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:     Applicative2
  build-depends:       AParser
                     , base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010