name:                knapsack
version:             0.1.0.0
synopsis:            Knapsack
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.20

library
  exposed-modules:     Knapsack
  build-depends:       base >=4.7 && <4.8, array >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language: Haskell2010
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  build-depends:    knapsack
                  , QuickCheck >= 2.7
                  , base
                  , tasty
                  , tasty-quickcheck
