name:                monoids
version:             0.1.0.0
synopsis:            monoids
license:             GPL-3
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
build-type:          Simple
cabal-version:       >=1.20

library
  exposed-modules:     Monoids
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
